# PPG2Lab12

./: .gitignore  CMakeLists.txt  README.md  rc.bat
.xmake/windows/x64/cache/: config  detect  package  references  toolchain
src/csg2d/: Circle.cpp  Circle.h  ComplexShape.cpp  ComplexShape.h  Rectangle.cpp  Rectangle.h  functions.cpp  libincludes.h
